fix(icons): update expand/collapse icons aliases

--- a/packages/fluent/scss/treelist/_layout.scss
+++ b/packages/fluent/scss/treelist/_layout.scss
@@ -46,8 +46,8 @@
             border-top-width: 0;
         }
 
-        .k-i-collapse,
-        .k-i-expand {
+        .k-i-caret-alt-down,
+        .k-i-caret-alt-right {
             margin-inline-end: map.get( $kendo-spacing, 2 );
         }
     }
